# driftscribe

./: .dockerignore  .env.example  .gcloudignore  .gitguardian.yaml  .gitignore  Dockerfile.agent  Makefile  README.ja.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  demo-health.yml  demo-reset.yml  e2e.yml  iac.yml
.pat-write-test/: docs-agent-new-20260531233443.md  upgrade-docs-new-20260531234156.md
agent/: adk_agent.py  adk_tools.py  approval_i18n.py  approvals.py  auth.py  autonomy.py  capabilities.py  cf_access.py  classifier.py  cli.py  cloud_run_client.py  config.py  contract.py  fanout.py  github_actions.py  iac_artifacts.py  iac_csrf.py  iac_pr_source_cache.py  infra_graph_cache_store.py  main.py  models.py  pause.py  per_pr_cache.py  renderer.py  request_context.py  runbook_patcher.py  secret_guard.py  state_store.py  trace_fetcher.py  upgrade_contract.py  validator.py  worker_client.py  workload_context.py
agent/mcp/: __init__.py  developer_knowledge.py
agent/templates/: approval.html  iac_approval.html  transparency.html  transparency_legacy.html
agent/workloads/: __init__.py  registry.py  spec.py
checker/: cli.py
demo/: Dockerfile  main.py  ops-contract.yaml  pyproject.toml
demo/docs/: iac_storage_bucket_management.md  runbook.md
demo/upgrade-target/: README.md  package.json
docs/: OVERVIEW.md  benchmarks.md  demo-script.ja.md  demo-script.md  i18n-glossary.md
docs/architecture/: architecture.html  eventarc-payload.md  iam-matrix.md  multi-agent-design.md
docs/audit/: 2026-07-07-backend.md  2026-07-07-frontend.md  2026-07-07-security.md  2026-07-07-tests-ci.md  README.md
docs/handoff/: 2026-05-29-c2-smoke-test-handoff.md  2026-05-29-session-handoff.md  2026-05-30-compute-sa-phase1-execution.md  2026-05-30-compute-sa-resource-policy.pre-phase1.json  2026-05-31-build-identity-actas.pre-phase7.json  2026-05-31-compute-sa-project-roles.pre-phase5.json  2026-05-31-compute-sa-project-roles.pre-phase6.json  2026-05-31-gemini-api-key-iam.pre-phase5.json  2026-06-01-phase-d-session-handoff.md  2026-06-01-phase-d5-session-handoff.md
docs/plans/: 2026-05-18-driftscribe-mvp.md  2026-05-19-driftscribe-phase17-framework-mcp.md  2026-05-19-driftscribe-v3-multi-agent.md  2026-05-20-driftscribe-log-archival-and-thoughts.md  2026-05-21-driftscribe-phase19-transparency-ui.md  2026-05-24-driftscribe-phase20-e2e-testing.md  2026-05-26-realtime-timeline-streaming-design.md  2026-05-26-realtime-timeline-streaming.md  2026-05-27-infra-iac-agent-design.md  2026-05-27-infra-iac-phase-a.md  2026-05-27-infra-iac-phase-b-design.md  2026-05-27-infra-iac-phase-b.md  2026-05-28-infra-iac-phase-c1-denylist.md  2026-05-28-infra-iac-phase-c2-plan-builder.md  2026-05-29-infra-iac-phase-c3-plan-approval.md  2026-05-29-infra-iac-phase-c4-tofu-apply.md  2026-05-30-default-compute-sa-retirement.md  2026-05-30-infra-iac-phase-c5-coordinator-integration.md  2026-05-30-infra-iac-phase-c5c-vpc-reachability-implementation.md  2026-05-30-infra-iac-phase-c5e-implementation.md  2026-05-30-infra-iac-phase-c5f-c5g-hardening-smoke.md  2026-05-31-infra-iac-phase-c6-head-config-delivery.md  2026-06-01-infra-iac-phase-d-agent-authoring.md  2026-06-01-infra-iac-phase-d5-fanout.md  2026-06-02-driftscribe-ui-refresh-design.md  2026-06-02-driftscribe-ui-refresh-plan.md  2026-06-03-driftscribe-checkout-demo-and-infra-graph-design.md  2026-06-04-phase3-checkout-buildout-execution-plan.md  2026-06-08-backend-rationale-scrub.md  (+75 more)
driftscribe_lib/: adopt_recipe.py  approvals.py  auth.py  cf_access.py  cloud_run.py  github.py  iac_cost.py  iac_editor_policy.py  iac_hcl.py  iac_plan_classify.py  iac_plan_denylist.py  iac_plan_metadata.py  iac_plan_summary.py  iac_tree.py  infra_graph.py  infra_inventory.py  logging.py  pending_approvals.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
iac/: README.md  adopt_bucket_driftscribe_hack_2026_adopt_probe.tf  adopt_bucket_driftscribe_hack_2026_adopt_ui_probe.tf  adopt_bucket_driftscribe_hack_2026_cloudbuild.tf  adopt_bucket_driftscribe_hack_2026_receipts.tf  adopt_service_adopt_probe_svc.tf  adopt_subscription_adopt_probe_sub.tf  adopt_topic_adopt_probe_topic.tf  agent_authored_smoke.tf  c6e_probe.tf  checkout_assets.tf  checkout_events.tf  checkout_orders_worker.tf  checkout_storefront.tf  cloudrun.tf  d5-probe-a.tf  d5-probe-b.tf  imports.tf  variables.tf  versions.tf
infra/: cloudbuild.coordinator-update.yaml  cloudbuild.infra-reader.yaml  cloudbuild.tofu-apply.yaml  cloudbuild.tofu-editor.yaml  cloudbuild.upgrade-docs-update.yaml  cloudbuild.upgrade-reader-update.yaml  cloudbuild.yaml
scripts/: backfill_iac_pr_title.py  demo.sh
spikes/cloud_run_auth/callee/: main.py  pyproject.toml
spikes/cloud_run_auth/caller/: Dockerfile  main.py  pyproject.toml
tests/: conftest.py
tools/: iac_plan_artifact_upload.py  iac_plan_denylist.py  iac_plan_diff_summary.py  iac_plan_metadata.py  iac_static_gate.py  iac_tree_hash.py  iac_tree_sidecar.py
workers/docs/: Dockerfile  main.py  pyproject.toml
workers/docs/tests/: test_patch.py  test_path_allowlist.py
workers/infra_reader/: Dockerfile  main.py  pyproject.toml
workers/infra_reader/tests/: test_describe.py
workers/notifier/: Dockerfile  main.py  pyproject.toml
workers/notifier/tests/: test_notify.py
workers/reader/: Dockerfile  main.py  pyproject.toml
workers/reader/tests/: test_read.py
workers/rollback/: Dockerfile  main.py  pyproject.toml
workers/rollback/tests/: test_rollback.py
workers/tofu_apply/: Dockerfile  gcs_fetch.py  main.py  pyproject.toml  tofu_runner.py
workers/tofu_apply/tests/: test_dockerfile.py  test_tofu_apply.py
workers/tofu_editor/: Dockerfile  main.py  pyproject.toml
workers/tofu_editor/tests/: test_dockerfile.py  test_no_agent_import.py  test_open_pr.py  test_open_pr_dispatch.py  test_path_allowlist.py  test_static_gate_precheck.py  test_tofu_fmt.py
workers/upgrade_reader/: Dockerfile  main.py  pyproject.toml
workers/upgrade_reader/tests/: test_read.py
(+463 files in other folders)
