[project]
name = "driftscribe"
version = "0.1.0"
description = "AI DevOps agent for live Cloud Run drift detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-adk>=0.4",
    "google-cloud-run>=0.10",
    "google-cloud-firestore>=2.19",
    "google-genai>=0.5",
    "pygithub>=2.5",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
]

[project.scripts]
driftscribe = "agent.cli:app"
driftscribe-check = "checker.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "checker", "driftscribe_lib"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# `workers/` is included so per-worker tests (Phase 11.3+) run with the rest
# of the suite. Each worker is its own deployable container but tests can be
# executed together from the repo root for CI/dev parity.
testpaths = ["tests", "workers"]

[tool.ruff]
line-length = 100
target-version = "py312"
