[project]
name = "driftscribe"
version = "0.1.0"
description = "AI DevOps agent for live Cloud Run drift detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Pinned to lockfile version. Dockerfile.agent installs from pyproject
    # floors (not uv.lock), so a >= floor lets Cloud Build pull a newer ADK
    # that drops the `from google.adk.tools.mcp_tool import McpToolset`
    # re-export — `developer_knowledge.py:99` breaks on import and the
    # coordinator container can't start. Exact pin until Dockerfile.agent
    # switches to lockfile-based install (deferred follow-up).
    "google-adk==1.33.0",
    "google-cloud-run>=0.10",
    "google-cloud-firestore>=2.19",
    # Already pulled in transitively via opentelemetry-exporter-gcp-logging,
    # but the /trace endpoint (Phase 19.A.5+) reads from Cloud Logging
    # directly. Promote to a direct dep so a future ADK / OTEL exporter
    # version dropping it doesn't silently break /trace.
    "google-cloud-logging>=3.11",
    "google-genai>=0.5",
    "pygithub>=2.5",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.15",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "python-hcl2>=4.3",
    "respx>=0.21",
    "ruff>=0.7",
]

[project.scripts]
driftscribe = "agent.cli:app"
driftscribe-check = "checker.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "checker", "driftscribe_lib"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# `workers/` is included so per-worker tests (Phase 11.3+) run with the rest
# of the suite. Each worker is its own deployable container but tests can be
# executed together from the repo root for CI/dev parity.
#
# `tests/e2e/` is intentionally omitted from the default collection set
# (Phase 20.1+) — those tests touch live Cloud Run + Firestore and must be
# invoked explicitly via `pytest tests/e2e -m e2e` with the appropriate
# `DRIFTSCRIBE_E2E_*` env vars set.
testpaths = ["tests/unit", "tests/integration", "workers"]
markers = [
    "e2e: end-to-end tests requiring a deployed coordinator (skip by default)",
]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
