# Canonical dependency documentation for the Docs Agent worker.
#
# Same pattern as workers/reader/pyproject.toml: the worker's container is
# NOT built by `pip install .` against this file — the Dockerfile installs
# the listed deps directly via `uv pip install --system <pinned list>` to
# avoid pulling in a build-system. `driftscribe_lib` is made available
# inside the container via PYTHONPATH (see workers/docs/Dockerfile).
#
# Keep this file in sync with the Dockerfile install line. Future agents /
# the spec reviewer should be able to read the worker's deps without parsing
# a Dockerfile.
[project]
name = "driftscribe-docs"
version = "0.1.0"
description = "DriftScribe Docs Agent — scoped GitHub PR creator worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    # PyGithub powers driftscribe_lib.github.open_docs_pr.
    "pygithub>=2.5",
    # google-auth + requests for driftscribe_lib.auth.verify_caller.
    "google-auth>=2.35",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",  # for fastapi.testclient.TestClient
]
