# Canonical dependency documentation for the Notifier Agent worker.
#
# Same pattern as workers/reader|docs|rollback/pyproject.toml: the worker's
# container is NOT built by `pip install .` against this file — the
# Dockerfile installs the listed deps directly via `uv pip install --system
# <pinned list>` to avoid pulling in a build-system. `driftscribe_lib` is
# made available inside the container via PYTHONPATH (see
# workers/notifier/Dockerfile).
#
# Keep this file in sync with the Dockerfile install line. Future agents /
# the spec reviewer should be able to read the worker's deps without
# parsing a Dockerfile.
[project]
name = "driftscribe-notifier"
version = "0.1.0"
description = "DriftScribe Notifier Agent — URL-locked webhook poster"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    # httpx is the outbound HTTP client used by the worker itself. It is
    # ALSO a transitive dep of fastapi.testclient, but we list it
    # explicitly here so a future "drop the test dep" cleanup doesn't
    # accidentally remove the runtime dep too.
    "httpx>=0.27",
    "google-auth>=2.35",
    # google.auth.transport.requests imports `requests` at runtime; it is
    # NOT pulled in transitively by google-auth. Spike 11.0 confirmed this.
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
