# Canonical dependency documentation for the Rollback Agent worker.
#
# Same pattern as workers/reader/pyproject.toml and workers/docs/pyproject.toml:
# the worker's container is NOT built by `pip install .` against this file —
# the Dockerfile installs the listed deps directly via `uv pip install --system
# <pinned list>` to avoid pulling in a build-system. `driftscribe_lib` is made
# available inside the container via PYTHONPATH (see workers/rollback/Dockerfile).
#
# Keep this file in sync with the Dockerfile install line. Future agents /
# the spec reviewer should be able to read the worker's deps without parsing
# a Dockerfile.
[project]
name = "driftscribe-rollback"
version = "0.1.0"
description = "DriftScribe Rollback Agent — HITL-gated Cloud Run traffic rollback"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    # Cloud Run admin API — drives _list_revisions / _apply_traffic.
    "google-cloud-run>=0.10",
    # Firestore — backs the approvals collection via driftscribe_lib.approvals.
    "google-cloud-firestore>=2.19",
    "google-auth>=2.35",
    # google.auth.transport.requests imports `requests` at runtime; it is
    # NOT pulled in transitively by google-auth. Spike 11.0 confirmed this.
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",  # for fastapi.testclient.TestClient
]
