[project]
name = "spike-callee"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-auth>=2.35",
    # `google.auth.transport.requests` (which verify_oauth2_token uses for the
    # OAuth cert fetch) imports the `requests` package — google-auth doesn't
    # pull it in transitively.
    "requests>=2.32",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
