[project]
name = "spike-caller"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-auth>=2.35",
    # `google.auth.transport.requests` (which `fetch_id_token` uses by default)
    # imports the `requests` package — not pulled in by google-auth itself.
    "requests>=2.32",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
